[gd_scene load_steps=3 format=3 uid="uid://dialogue_box_ui_001"]

[ext_resource type="Script" path="res://scripts/ui/dialogue_controller.gd" id="1_controller"]

[sub_resource type="LabelSettings" id="LabelSettings_speaker"]
font_size = 18

[node name="DialogueBox" type="CanvasLayer" groups=["dialogue_box"]]
layer = 10
script = ExtResource("1_controller")

[node name="DialoguePanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -220.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DialoguePanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitSection" type="VBoxContainer" parent="DialoguePanel/MarginContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)

[node name="PortraitColor" type="ColorRect" parent="DialoguePanel/MarginContainer/HBoxContainer/PortraitSection"]
layout_mode = 2
custom_minimum_size = Vector2(100, 100)
size_flags_horizontal = 4
color = Color(0.5, 0.5, 0.8, 1)

[node name="NPCNameLabel" type="Label" parent="DialoguePanel/MarginContainer/HBoxContainer/PortraitSection"]
layout_mode = 2
text = "NPC Name"
horizontal_alignment = 1

[node name="TextSection" type="VBoxContainer" parent="DialoguePanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeakerLabel" type="Label" parent="DialoguePanel/MarginContainer/HBoxContainer/TextSection"]
layout_mode = 2
text = "Speaker Name"
label_settings = SubResource("LabelSettings_speaker")

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/MarginContainer/HBoxContainer/TextSection"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Dialogue text goes here..."
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="DialoguePanel/MarginContainer/HBoxContainer/TextSection"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ContinueIndicator" type="Label" parent="DialoguePanel/MarginContainer/HBoxContainer/TextSection"]
layout_mode = 2
text = "Press E to continue ▼"
horizontal_alignment = 2

[node name="FriendshipChangeLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
text = "+5 ❤️"
horizontal_alignment = 1
